// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProjectStepAdminItem /> renders correctly 1`] = `
<PublicDraggable
  draggableId="1"
  index={0}
  key="1"
>
  <Component />
</PublicDraggable>
`;

exports[`<ProjectStepAdminItem /> renders correctly without id 1`] = `
<PublicDraggable
  draggableId="new-step-0"
  index={0}
  key="null"
>
  <Component />
</PublicDraggable>
`;
